<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="5"
    tools:context="aji.bayu.adnan.cataloguemovies.pagesearch.DetailMovieActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="@drawable/header_background_color"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgPoster"
            android:layout_width="wrap_content"
            android:layout_height="250dp" />

        <TextView
            android:id="@+id/detailJudul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/title_judul"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:gravity="center">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_star_border_black_24dp"
                    android:drawablePadding="2dp"
                    android:text="@string/title_rating"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/detailVote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorGrey"
                    android:padding="5dp"
                    android:text="@string/content_ratings"
                    android:textColor="@color/colorBlueGrey"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/ic_date_range_black_24dp"
                    android:drawablePadding="2dp"
                    android:text="@string/title_date_of_release"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/detailReleaseDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#E0E0E0"
                    android:padding="5dp"
                    android:text="@string/content_tanggal"
                    android:textColor="@color/colorBlueGrey"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/ic_textsms_black_24dp"
                    android:drawablePadding="2dp"
                    android:text="@string/title_overview"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <me.biubiubiu.justifytext.library.JustifyTextView
                    android:id="@+id/detailOverview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorGrey"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/long_overview"
                    android:textColor="@color/colorBlueGrey"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>