<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imgMoviePict"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        tools:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@id/imgMoviePict"
        android:layout_toLeftOf="@id/imgMoviePict"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="8dp"
        android:layout_toRightOf="@+id/imgMoviePict"
        android:maxLines="2"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:text="@string/title" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/tvTitle"
        android:layout_centerVertical="true"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp"
        android:layout_toRightOf="@+id/imgMoviePict"
        android:layout_toStartOf="@id/imgMoviePict"
        android:layout_toLeftOf="@id/imgMoviePict"
        android:ellipsize="end"
        android:maxLines="1"
        android:textSize="16sp"
        tools:text="@string/description" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvDescription"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp"
        android:layout_toRightOf="@+id/imgMoviePict"
        android:layout_toStartOf="@id/imgMoviePict"
        android:layout_toLeftOf="@id/imgMoviePict"
        android:maxLines="1"
        tools:text="@string/date" />
</RelativeLayout>