<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginBottom="4dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="4dp"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_poster"
            android:layout_width="150dp"
            android:layout_height="220dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/poster_movie"
            android:scaleType="centerCrop"
            tools:src="@color/colorAccent" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/MovieFont"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_toStartOf="@+id/img_poster"
            android:layout_toLeftOf="@+id/img_poster"
            android:ellipsize="end"
            android:singleLine="true"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="Title of Movie" />

        <TextView
            android:id="@+id/tv_description"
            style="@style/MovieFont"
            android:layout_below="@+id/tv_title"
            android:layout_marginBottom="8dp"
            android:layout_toStartOf="@+id/img_poster"
            android:layout_toLeftOf="@+id/img_poster"
            android:ellipsize="end"
            android:maxLines="3"
            tools:text="Short description about the movie" />

        <TextView
            android:id="@+id/tv_release"
            style="@style/MovieFont"
            android:layout_below="@+id/tv_description"
            android:layout_toStartOf="@id/img_poster"
            android:layout_toLeftOf="@id/img_poster"
            tools:text="Wednesday, Nov 23, 2016" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_toStartOf="@+id/img_poster"
            android:layout_toLeftOf="@+id/img_poster"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_detail"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/detail"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_share"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/share"
                android:textSize="12sp" />

        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>